<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ActivityAddImage">

    <EditText
            android:layout_width="@dimen/add_image_title_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText_add_image_title"
            android:layout_marginEnd="@dimen/add_image_title_margin_end"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="@dimen/add_image_title_margin_top"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/add_image_title_hint"
            android:inputType="text" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"/>
    <RadioButton
            android:text="@string/add_image_auto_tags_radio_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_add_image" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/add_image_auto_tags_margin_start"
            android:layout_marginTop="@dimen/add_image_auto_tags_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_image_date"/>
    <EditText
            android:layout_width="@dimen/add_image_url_width"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/editText_add_image_url"
            android:hint="@string/add_image_url_hint" android:layout_marginEnd="@dimen/add_image_url_margin_end"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/add_image_url_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_image_title" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"/>
    <EditText
            android:layout_width="@dimen/add_image_date_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText_add_image_date"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/add_image_date_margin_end"
            android:layout_marginTop="@dimen/add_image_date_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_image_url"
            android:hint="@string/add_image_date_hint" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"/>
    <EditText
            android:layout_width="@dimen/add_image_tags_width"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText_add_image_tags"
            android:hint="@string/add_image_tags_hint" android:layout_marginStart="@dimen/add_image_tags_margin_start"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/add_image_tags_margin_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rb_add_image"/>
    <Button
            android:text="@string/add_image_add_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_image_but_add"
            android:layout_marginTop="@dimen/add_image_add_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_image_tags"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/add_image_add_margin_start" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/add_image_add_margin_end"/>
    <TextView
            android:text="@string/add_image_title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:textSize="@dimen/add_image_label_text_size"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/add_image_label_margin" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="@dimen/add_image_label_margin" android:layout_marginBottom="@dimen/add_image_label_margin"
            app:layout_constraintBottom_toBottomOf="@+id/editText_add_image_title"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline3"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.22"/>
    <TextView
            android:text="@string/add_image_url_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/add_image_label_margin" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="@dimen/add_image_label_margin" android:textSize="@dimen/add_image_label_text_size" android:layout_marginBottom="@dimen/add_image_label_margin"
            app:layout_constraintBottom_toBottomOf="@+id/editText_add_image_url"/>
    <TextView
            android:text="@string/add_image_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_date" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="@dimen/add_image_label_margin" android:layout_marginBottom="@dimen/add_image_label_margin"
            app:layout_constraintBottom_toBottomOf="@+id/editText_add_image_date"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/add_image_label_margin" android:textSize="@dimen/add_image_label_text_size"/>


</android.support.constraint.ConstraintLayout>