<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/photo_card_cardView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="7dp"
>


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_gravity="fill_horizontal">


        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/gl_photo_card_between_photo_and_text"
                                              android:orientation="horizontal"
                                              app:layout_constraintGuide_percent="0.7"/>


        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:id="@+id/img_photo_card_photo"
                android:contentDescription="@string/swim_photos_image_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/gl_photo_card_between_photo_and_text"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:layout_marginStart="@dimen/photo_card_photo_margin_start"
                android:layout_marginEnd="@dimen/photo_card_photo_margin_end"
                android:paddingTop="27dp"

                android:scaleType="fitXY"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_photo_card_title_of_photo"
                android:singleLine="true"
                android:ellipsize="end"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/photo_card_title_of_photo_margin_start"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/photo_card_title_of_photo_margin_end"
                android:layout_marginTop="@dimen/photo_card_title_of_photo_margin_top"
                app:layout_constraintTop_toTopOf="@+id/gl_photo_card_between_photo_and_text"
                android:text="@string/swim_photos_default_title"
                android:textSize="@dimen/photo_card_title_of_photo_text_size" android:textStyle="bold"
                android:textAlignment="center"/>


        <TextView
                android:text="@string/default_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_photo_card_date" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/photo_card_date_margin_start"
                android:layout_marginTop="@dimen/photo_card_date_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/tv_photo_card_title_of_photo"/>


        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_photo_card_tags" app:layout_constraintStart_toStartOf="parent"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/photo_card_tags_margin_start"
                android:layout_marginTop="@dimen/photo_card_tags_margin_top"
                android:layout_marginEnd="@dimen/photo_card_tags_margin_end"
                app:layout_constraintTop_toBottomOf="@+id/tv_photo_card_date"/>


    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>


